--- a/index.html
+++ b/index.html
@@ -1,10 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>HTML</title>
-</head>
-<body>
-
-</body>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
+    </head>
+    <body>  
+        <h1><font>Unified Modeling Language Theory Test</font></h1>
+        <table>
+            <tr>
+              <td>Test Subject: Unified Modeling Language</td>
+              <td>Time: 100minute</td>
+              <td>Score: 100</td>
+            </tr>
+            <tr>
+              <td>Class: <input type="text" name="class" value="Class 1"></td>
+              <td>Student ID: <input type="text" name="studentID" value="001"></td>
+              <td>Name: <input type="text" name="name" value="Darcy"></td>
+            </tr>
+        </table>
+        <h1><font>1、Fill in the blanks(5 points per space,20 points total)</font></h1>
+        <font>1.The full name of UML in Chiness is:<input type="text" name="Chinessname" value="Unified Modeling Language"></font><br>
+        <font>2.The most prominent feature of the object is:
+            <input type="text" name="featureone" value="Encapsulation">
+            <input type="text" name="featuretwo" value="Inheritance">
+            <input type="text" name="featureone" value="Polymorphism">
+        </font>
+        <h1><font>2、Multiple choice question(10 points per space,20 points total)</font></h1>
+        <form action="" method="get"> 
+            1.The relationshipbetween UML and software engineering is:<br /><br /> 
+            <label><input name="choice" type="radio" value="" />(A)UML is software engineering</label><br>
+            <label><input name="choice" type="radio" value="" />(B)UML participates in several stages of the software development process in sofrware engineering</label> <br>
+            <label><input name="choice" type="radio" value="" />(C)UML has nothing to do with software engineering</label> <br>
+            <label><input name="choice" type="radio" value="" />(D)UML is part of software engineering</label> 
+        </form>
+        <form action="" method="get"> 
+            2.Java language support:<br /><br /> 
+            <label><input name="choice" type="radio" value="" />(A)Single inheritance</label><br>
+            <label><input name="choice" type="radio" value="" />(B)Multiple inheritance</label> <br>
+            <label><input name="choice" type="radio" value="" />(C)Single inheritance and multple inhertance support</label> <br>
+            <label><input name="choice" type="radio" value="" />(D)Single inheritance and multiple inheritance are not supported</label> 
+        </form>
+        <h1><font>3、Multiple choice question(10 points per space,20 points total)</font></h1>
+        <form action="" method="get"> 
+            1.the granularity of the use case is divided into the following three:<br /><br> 
+            <label><input name="choice" type="checkbox" value="" />(A)Overview level</label><br>
+            <label><input name="choice" type="checkbox" value="" />(B)Demand level</label> <br>
+            <label><input name="choice" type="checkbox" value="" />(C)User terget level</label><br>
+            <label><input name="choice" type="checkbox" value="" />(D)Sub-function level</label> 
+        </form>
+        <form action="" method="get"> 
+            2.The class diagram consists of which of the following three pares:<br /><br> 
+            <label><input name="choice" type="checkbox" value="" />(A)Name</label><br>
+            <label><input name="choice" type="checkbox" value="" />(B)Attribute</label> <br>
+            <label><input name="choice" type="checkbox" value="" />(C)Opration</label><br>
+            <label><input name="choice" type="checkbox" value="" />(D)Function</label> 
+        </form>
+        <h1><font>4、True or False(10 points per space,20 points total)</font></h1>
+        <form action="" method="get"> 
+            1.Use case diagrams are only used communicate and communicate with customers to determine demand。 
+            <label><input name="choice" type="radio" value="" />True </label> 
+            <label><input name="choice" type="radio" value="" />False</label> 
+        </form> 
+        <form action="" method="get"> 
+            2.In the state diagram,the termination state allows any number of multiples in a state diagram。 
+            <label><input name="choice" type="radio" value="" />True </label> 
+            <label><input name="choice" type="radio" value="" />False</label>  
+        </form> 
+        <h1><font>5、Short answer question(20 points per space,20 points total)</font></h1>
+        <font>1.Briefly describe what the model is and how it behave?</font><br><br>
+        <textarea style="width:800px;height:150px;"></textarea><br><br>
+        <input type="submit" value="Calculating score">
+    </body>
 </html>
