add something in textarea

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         </form> 
         <h1><font>5、Short answer question(20 points per space,20 points total)</font></h1>
         <font>1.Briefly describe what the model is and how it behave?</font><br><br>
-        <textarea style="width:800px;height:150px;"></textarea><br><br>
+        <textarea style="width:800px;height:150px;">
+            A model is a simplification and abstraction of the real world.Amodel is an wxpression of the system,process,thing or concept of research.Can be a physical entiry;can be a certain graphic;or a mathematical expression.
+        </textarea><br><br>
         <input type="submit" value="Calculating score">
     </body>
 </html>
